<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AirplaneActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/ray_sky"
        tools:ignore="ContentDescription,ImageContrastCheck" />

    <ImageView
        android:id="@+id/airplane"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:contentDescription="@string/airplane"
        app:srcCompat="@drawable/airplane"
        tools:visibility="gone" />

    <TextView
        android:id="@+id/coefficient"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|top"
        android:layout_margin="15dp"
        android:background="#1AFF00"
        android:paddingHorizontal="10dp"
        android:paddingVertical="5dp"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        android:visibility="gone"
        tools:visibility="visible" />

    <LinearLayout
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="30dp"
        android:visibility="gone"
        tools:visibility="visible">

        <pl.droidsonroids.gif.GifImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@drawable/airplane_anim" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/waiting_for_next_round"
            android:textColor="@color/brick_red"
            android:textSize="26sp"
            android:textStyle="bold" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="100"
            android:paddingTop="10dp"
            android:progress="50" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@color/cod_gray"
        android:orientation="vertical"
        android:padding="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtBalance"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ellipsize="marquee"
                android:padding="5dp"
                android:singleLine="true"
                android:text="@string/balance"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/txtCurrBet"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ellipsize="marquee"
                android:padding="5dp"
                android:singleLine="true"
                android:text="@string/curr_bet"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:visibility="gone" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="horizontal">

            <GridLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:columnCount="2"
                android:rowCount="2"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/txtBet"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.5">

                <Button
                    android:id="@+id/btnDown5"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:backgroundTint="@color/btn_main_bg"
                    android:insetLeft="6dp"
                    android:insetRight="6dp"
                    android:padding="0dp"
                    android:text="@string/down_5"
                    android:textColor="@color/btn_main_txt"
                    app:iconPadding="0dp" />

                <Button
                    android:id="@+id/btnDown1"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:backgroundTint="@color/btn_main_bg"
                    android:insetLeft="6dp"
                    android:insetRight="6dp"
                    android:padding="0dp"
                    android:text="@string/down_1"
                    android:textColor="@color/btn_main_txt" />

                <Button
                    android:id="@+id/btnDown10"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_rowWeight="1"
                    android:layout_columnSpan="2"
                    android:layout_columnWeight="1"
                    android:backgroundTint="@color/btn_main_bg"
                    android:insetLeft="6dp"
                    android:insetRight="6dp"
                    android:padding="0dp"
                    android:text="@string/down_10"
                    android:textColor="@color/btn_main_txt"
                    tools:ignore="VisualLintButtonSize" />

            </GridLayout>

            <TextView
                android:id="@+id/txtBet"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ellipsize="marquee"
                android:gravity="center"
                android:padding="15dp"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textSize="28sp"
                android:textStyle="bold" />

            <GridLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:columnCount="2"
                android:rowCount="2">

                <Button
                    android:id="@+id/btnAdd1"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:backgroundTint="@color/btn_main_bg"
                    android:insetLeft="6dp"
                    android:insetRight="6dp"
                    android:padding="0dp"
                    android:text="@string/add_1"
                    android:textColor="@color/btn_main_txt" />

                <Button
                    android:id="@+id/btnAdd5"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:backgroundTint="@color/btn_main_bg"
                    android:insetLeft="6dp"
                    android:insetRight="6dp"
                    android:padding="0dp"
                    android:text="@string/add_5"
                    android:textColor="@color/btn_main_txt" />

                <Button
                    android:id="@+id/btnAdd10"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_rowWeight="1"
                    android:layout_columnSpan="2"
                    android:layout_columnWeight="1"
                    android:backgroundTint="@color/btn_main_bg"
                    android:insetLeft="6dp"
                    android:insetRight="6dp"
                    android:padding="0dp"
                    android:text="@string/add_10"
                    android:textColor="@color/btn_main_txt"
                    tools:ignore="VisualLintButtonSize" />
            </GridLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btnBet"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/btn_action_bg"
                    android:insetLeft="6dp"
                    android:insetRight="6dp"
                    android:padding="0dp"
                    android:text="@string/make_bet"
                    android:textColor="@color/btn_main_txt"
                    tools:ignore="NestedWeights,VisualLintButtonSize" />

                <Button
                    android:id="@+id/btnTakeOff"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/btn_accept_bg"
                    android:insetLeft="6dp"
                    android:insetRight="6dp"
                    android:padding="0dp"
                    android:text="@string/take_off"
                    android:textColor="@color/btn_main_txt"
                    tools:ignore="VisualLintButtonSize,TextContrastCheck" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/spentMenu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:background="#4D000000"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="5dp"
        android:visibility="gone">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/you_have_spent"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnResetCredits"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:backgroundTint="@color/btn_accept_bg"
            android:insetLeft="6dp"
            android:insetRight="6dp"
            android:padding="0dp"
            android:text="@string/reset_credits"
            android:textColor="@color/btn_main_txt" />

    </LinearLayout>

</FrameLayout>